# Road-work-ways

./: .gitignore  README.md  package-lock.json  package.json
deployment/: Dockerfile.api  docker-compose.yml  nginx.conf
docs/: API.md  SETUP.md
roadworks-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
roadworks-api/alembic/: env.py
roadworks-api/app/: main.py
roadworks-api/app/api/: router.py
roadworks-api/app/api/v1/: attendance.py  auth.py  employees.py  expenses.py  materials.py  projects.py  reports.py  stock.py  vendors.py
roadworks-api/app/core/: config.py  exceptions.py  permissions.py  security.py
roadworks-api/app/db/: base.py  base_class.py  init_db.py  session.py
roadworks-api/app/dependencies/: auth.py
roadworks-api/app/models/: attendance.py  employee.py  employee_log.py  expense.py  material.py  material_stock.py  material_transaction.py  project.py  user.py  vendor.py
roadworks-api/app/repositories/: employee_repository.py  expense_repository.py  material_repository.py  project_repository.py  stock_repository.py  user_repository.py  vendor_repository.py
roadworks-api/app/schemas/: attendance.py  auth.py  employee.py  expense.py  material.py  project.py  stock.py  user.py  vendor.py
roadworks-api/app/services/: auth_service.py  employee_service.py  expense_service.py  material_service.py  project_service.py  stock_service.py  vendor_service.py
roadworks-api/app/utils/: pagination.py  response.py
roadworks-compose/: .env.example  .gitignore  docker-compose.yml
(+77 files in other folders)
