[tool.poetry]
name = "roadworks-api"
version = "1.0.0"
description = "Road Work Ways - Indian Road Construction Management System API"
authors = ["Road Work Ways Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = { extras = ["standard"], version = "0.24.0" }
sqlalchemy = "2.0.23"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
pydantic = "2.5.2"
pydantic-settings = "2.1.0"
python-jose = { extras = ["cryptography"], version = "3.3.0" }
passlib = { extras = ["bcrypt"], version = "1.7.4" }
python-multipart = "0.0.6"
python-dotenv = "1.0.0"
httpx = "0.25.2"
email-validator = "2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
